--- a/index.ipynb
+++ b/index.ipynb
@@ -368,7 +368,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "cursor.execute(\"\"\"select sum(hits+BB) from babe_ruth_sta\"\"\").fetchall()"
+    "cursor.execute(\"\"\"select sum(hits+BB) from babe_ruth_st\"\"\").fetchall()"
    ]
   },
   {
