Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -368,7 +368,12 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "cursor.execute(\"\"\"select hits+BB from\"\"\").fetchall()"
+    "cursor.execute(\"\"\"sselect year,\n",
+    "                      hits + BB as on_base\n",
+    "                      from babe_ruth_stats\n",
+    "                      group by 1\n",
+    "                      having hits + BB > 300\n",
+    "                      order by hits + BB desc\"\"\").fetchall()"
    ]
   },
   {
