Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -368,8 +368,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "cursor.execute(\"\"\"sselect year,\n",
-    "                      hits + BB as on_base\n",
+    "cursor.execute(\"\"\"select year,hits + BB as on_base\n",
     "                      from babe_ruth_stats\n",
     "                      group by 1\n",
     "                      having hits + BB > 300\n",
