--- a/index.ipynb
+++ b/index.ipynb
@@ -368,8 +368,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "cursor.execute(\"\"\"select year,hits + BB as on_base\n",
-    "                      from babe_ruth_stats\n",
+    "cursor.execute(\"\"\"select year,hits+BB as on_base     from babe_ruth_stats\n",
     "                      group by 1\n",
     "                      having hits + BB > 300\n",
     "                      order by hits + BB desc\"\"\").fetchall()"
