--- a/index.ipynb
+++ b/index.ipynb
@@ -368,8 +368,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "cursor.execute(\"\"\"select year,hits+BB as on_base from babe_ruth_stats group by 1         having hits + BB > 300\n",
-    "                      order by hits + BB desc\"\"\").fetchall()"
+    "cursor.execute(\"\"\"select year,hits+BB as on_base from babe_ruth_stats group by 1 having hits + BB > 300                 order by hits + BB desc\"\"\").fetchall()"
    ]
   },
   {
