Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -363,12 +363,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'cursor' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-1e238d8b863a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\"\"select year,hits+BB as on_base from babe_ruth_stats group by 1 having hits+BB>300 order by hits+BB desc\"\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'cursor' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#Your code here\n",
-    "cursor.execute(\"\"\"select year,hits+BB as on_base from babe_ruth_stats group by 1 having hits+BB>300 order by hits + BB desc\"\"\").fetchall()"
+    "cursor.execute(\"\"\"select year,hits+BB as on_base from babe_ruth_stats group by 1 having hits+BB>300 order by hits+BB desc\"\"\").fetchall()"
    ]
   },
   {
